[gd_scene load_steps=12 format=2]

[ext_resource path="res://CellularMusicChatGPT/CellMusicChatGPT3.gd" type="Script" id=1]
[ext_resource path="res://as/energy-v1/Energy.otf" type="DynamicFontData" id=2]
[ext_resource path="res://CellularMusicChatGPT/MusicPlaying.tscn" type="PackedScene" id=3]
[ext_resource path="res://CellularMusicChatGPT/Visualizer.gd" type="Script" id=4]
[ext_resource path="res://CellularMusicChatGPT/AudioPlayer.gd" type="Script" id=5]
[ext_resource path="res://FontTheme.tres" type="Theme" id=6]
[ext_resource path="res://CellularMusicChatGPT/CellMusicContainer.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=2]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[sub_resource type="VideoStreamGDNative" id=4]

[sub_resource type="AudioStreamGenerator" id=1]

[node name="AudioPlayer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
musicLineScene = ExtResource( 3 )

[node name="VSplitContainer" type="VSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="VSplitContainer"]
margin_right = 1024.0
margin_bottom = 40.0

[node name="OnOffButton" type="CheckButton" parent="VSplitContainer/HBoxContainer"]
margin_right = 135.0
margin_bottom = 40.0
theme = SubResource( 3 )
pressed = true
text = "Music"

[node name="CheckButton" type="CheckButton" parent="VSplitContainer/HBoxContainer"]
margin_left = 139.0
margin_right = 263.0
margin_bottom = 40.0
theme = SubResource( 3 )
text = "Loop"

[node name="CheckButton2" type="CheckButton" parent="VSplitContainer/HBoxContainer"]
margin_left = 267.0
margin_right = 424.0
margin_bottom = 40.0
theme = SubResource( 3 )
text = "Shuffle"

[node name="CurrPlayingLabel" type="Label" parent="VSplitContainer/HBoxContainer"]
margin_left = 428.0
margin_top = 9.0
margin_right = 571.0
margin_bottom = 30.0
theme = SubResource( 3 )
text = "Curr Playing:"

[node name="CurrentSongLabel" type="Label" parent="VSplitContainer/HBoxContainer"]
margin_left = 575.0
margin_top = 9.0
margin_right = 816.0
margin_bottom = 30.0
size_flags_horizontal = 3
theme = SubResource( 3 )

[node name="VideoScreen" type="PanelContainer" parent="VSplitContainer/HBoxContainer"]
margin_left = 820.0
margin_right = 920.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 0 )

[node name="VideoPlayer" type="VideoPlayer" parent="VSplitContainer/HBoxContainer/VideoScreen"]
margin_left = 7.0
margin_top = 7.0
margin_right = 93.0
margin_bottom = 33.0
stream = SubResource( 4 )
buffering_msec = 1000

[node name="Visualizer" type="PanelContainer" parent="VSplitContainer/HBoxContainer"]
margin_left = 924.0
margin_right = 1024.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 0 )
script = ExtResource( 4 )

[node name="ScrollContainer" type="ScrollContainer" parent="VSplitContainer"]
margin_top = 52.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="VSplitContainer/ScrollContainer"]
margin_right = 662.0
margin_bottom = 45.0
size_flags_horizontal = 9

[node name="PanelContainer" parent="VSplitContainer/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 662.0
margin_bottom = 45.0
size_flags_horizontal = 11
musicNum = 0

[node name="MusicPlaying" parent="VSplitContainer/ScrollContainer/VBoxContainer/PanelContainer" index="0"]
margin_right = 655.0
margin_bottom = 38.0

[node name="CheckBox" parent="VSplitContainer/ScrollContainer/VBoxContainer/PanelContainer/MusicPlaying" index="0"]
margin_bottom = 31.0

[node name="Button" parent="VSplitContainer/ScrollContainer/VBoxContainer/PanelContainer/MusicPlaying" index="1"]
margin_top = 2.0
margin_bottom = 29.0

[node name="Label" parent="VSplitContainer/ScrollContainer/VBoxContainer/PanelContainer/MusicPlaying" index="2"]
margin_top = 5.0
margin_right = 275.0
margin_bottom = 26.0

[node name="LineEdit2" parent="VSplitContainer/ScrollContainer/VBoxContainer/PanelContainer/MusicPlaying" index="3"]
margin_left = 279.0
margin_top = 0.0
margin_right = 421.0
margin_bottom = 31.0

[node name="Label2" parent="VSplitContainer/ScrollContainer/VBoxContainer/PanelContainer/MusicPlaying" index="4"]
margin_left = 425.0
margin_top = 5.0
margin_right = 502.0
margin_bottom = 26.0

[node name="LineEdit" parent="VSplitContainer/ScrollContainer/VBoxContainer/PanelContainer/MusicPlaying" index="5"]
margin_left = 506.0
margin_top = 0.0
margin_right = 648.0
margin_bottom = 31.0

[node name="CellMusicContainer" type="PanelContainer" parent="VSplitContainer/ScrollContainer/VBoxContainer"]
margin_right = 662.0
margin_bottom = 45.0
size_flags_horizontal = 11
theme = ExtResource( 6 )
script = ExtResource( 7 )

[node name="MusicPlaying" type="HBoxContainer" parent="VSplitContainer/ScrollContainer/VBoxContainer/CellMusicContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 655.0
margin_bottom = 38.0

[node name="CheckBox" type="CheckBox" parent="VSplitContainer/ScrollContainer/VBoxContainer/CellMusicContainer/MusicPlaying"]
margin_right = 24.0
margin_bottom = 31.0

[node name="Button" type="Button" parent="VSplitContainer/ScrollContainer/VBoxContainer/CellMusicContainer/MusicPlaying"]
margin_left = 28.0
margin_top = 2.0
margin_right = 84.0
margin_bottom = 29.0
size_flags_vertical = 4
text = "Play"

[node name="Label" type="Label" parent="VSplitContainer/ScrollContainer/VBoxContainer/CellMusicContainer/MusicPlaying"]
margin_left = 88.0
margin_top = 5.0
margin_right = 275.0
margin_bottom = 26.0
size_flags_horizontal = 3
text = "Title: Data Sound"

[node name="LineEdit2" type="LineEdit" parent="VSplitContainer/ScrollContainer/VBoxContainer/CellMusicContainer/MusicPlaying"]
margin_left = 279.0
margin_right = 421.0
margin_bottom = 31.0
size_flags_vertical = 4
text = "0.0"

[node name="Label2" type="Label" parent="VSplitContainer/ScrollContainer/VBoxContainer/CellMusicContainer/MusicPlaying"]
margin_left = 425.0
margin_top = 5.0
margin_right = 502.0
margin_bottom = 26.0
text = "/ 0.0 /"

[node name="LineEdit" type="LineEdit" parent="VSplitContainer/ScrollContainer/VBoxContainer/CellMusicContainer/MusicPlaying"]
margin_left = 506.0
margin_right = 648.0
margin_bottom = 31.0
size_flags_vertical = 4
text = "300.0"

[node name="CellMusicChatGPT3" type="AudioStreamPlayer" parent="VSplitContainer/ScrollContainer/VBoxContainer/CellMusicContainer"]
stream = SubResource( 1 )
volume_db = -8.0
pitch_scale = 0.8
script = ExtResource( 1 )

[connection signal="pressed" from="VSplitContainer/ScrollContainer/VBoxContainer/CellMusicContainer/MusicPlaying/Button" to="VSplitContainer/ScrollContainer/VBoxContainer/CellMusicContainer" method="_on_Button_pressed"]

[editable path="VSplitContainer/ScrollContainer/VBoxContainer/PanelContainer"]
